<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>home_bots_description</name>
  <version>0.0.0</version>
  <description>
    Robot URDF descriptions of all the home bots.
  </description>
  <maintainer email="19168395+BizarrePenguin@users.noreply.github.com">Joran Schneyer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
